fixed sizing, text align, and color within style.css

--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
 }
 
 body {
-  background-image: linear-gradient(120deg, tomato, rgb(191, 117, 191));
+  background-image: linear-gradient(130deg, tomato, rgb(191, 117, 191));
   color: white;
-  font-family: 'anonymous Pro', sans-serif;
+  font-family: 'anonymous Pro', 'Poppin' , monospace, sans-serif;
   min-height: 100vh;
 }
 
@@ -26,20 +26,20 @@ form {
 form input,
 form button {
   padding: 0.5rem;
-  font-size: 1.5rem;
+  font-size: 1rem;
   border: none;
   background: white;
 }
 
 form button {
-  color: red;
+  color: tomato;
   background: white;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 
 form button:hover {
-  color: teal;
+  color: rgb(252, 146, 246);
 }
 
 .todo-container {
@@ -49,7 +49,7 @@ form button:hover {
 }
 
 .todo-list {
-  min-width: 40%;
+  min-width: 20%;
   list-style: none;
 }
 
@@ -57,8 +57,10 @@ form button:hover {
   margin: 0.5rem;
   background: white;
   color: black;
-  font-size: 1.5rem;
+  font-size: 1rem;
   display: flex;
+  padding-left: 0.5rem;
+  word-wrap: break-word;
   justify-content: space-between;
   align-items: center;
   transition: all 0.5s ease;
@@ -103,9 +105,12 @@ form button:hover {
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
+  -ms-appearance: none;
   appearance: none;
-  outline: none;
-  border: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background-image: none;
 }
 .select {
   margin: 1rem;
@@ -114,10 +119,11 @@ select {
 }
 
 select {
-  color: orange;
-  width: 10rem;
+  color: black;
+  width: 9rem;
+  font-family: 'Poppin', sans-serif;
   cursor: pointer;
-  padding: 1rem;
+  padding: 0.6rem;
 }
 
 .select::after {
@@ -126,12 +132,7 @@ select {
   background: rgb(241, 68, 151);
   top: 0;
   right: 0;
-  padding: 1rem;
+  padding: 0.6rem;
   pointer-events: none;
   transition: all 0.3s ease;
-}
-
-.select:hover::after{
-  background: white;
-  color: rgb(241, 68, 151);
 }
